--- a/20_spring-framework/100_IOC/70_高级/12_创建.md
+++ b/20_spring-framework/100_IOC/70_高级/12_创建.md
@@ -1,4 +1,80 @@
 
 
+# 手动 (不推荐)
 
-ImportBeanDefinitionRegistrar 
+https://yq.aliyun.com/articles/8126
+
+http://blog.csdn.net/gebitan505/article/details/55047886
+
+
+
+
+# @Import 快速注入
+
+
+
+Pojo:
+
+    public class Customer {
+    }
+
+Config:
+
+    @Component
+    @Import({Customer.class})
+    public class ImportDirect {
+    }
+
+
+# @Import ImportBeanDefinitionRegistrar 手动注入
+
+
+实现接口
+
+```
+public class MyImportBd implements ImportBeanDefinitionRegistrar {
+
+    public static String personD = "personD";
+
+    @Override
+    public void registerBeanDefinitions(AnnotationMetadata importingClassMetadata, BeanDefinitionRegistry registry) {
+        if(!registry.containsBeanDefinition(personD)){
+            GenericBeanDefinition beanDefinition = new GenericBeanDefinition();
+            beanDefinition.setBeanClass(Person.class);
+            beanDefinition.setSynthetic(true);
+            registry.registerBeanDefinition(personD, beanDefinition);
+        }
+    }
+}
+
+
+```
+
+配置
+
+```
+@Component
+@Import(MyImportBd.class)
+public class Config {
+}
+
+```
+
+
+
+
+
+# 参考
+
+简单创建
+
+http://blog.csdn.net/hfmbook/article/details/70209178
+
+
+详细介绍注解
+
+http://blog.csdn.net/u012437781/article/details/78626134
+
+xml和注解
+
+http://nobodyiam.com/2017/02/26/several-ways-to-extend-spring/
