--- a/20_spring-framework/100_IOC/30_源码解读/50_注解.md
+++ b/20_spring-framework/100_IOC/30_源码解读/50_注解.md
@@ -2,3 +2,7 @@
 
 
 http://blog.csdn.net/liaokailin/article/details/49107209
+
+ScannedGenericBeanDefinition
+
+http://www.jb51.net/article/112039.htm
